feat: ecogesture home page
some small refactoring, too